# tcga-nmf

./: .gitignore  HmWidget_Jscatter.ipynb  README.md  Untitled.ipynb  all_H_component_contributions.csv  backup_plot.py.txt  cancer_type_color_map.json  config.json  handoff.md  heatmap_dev.ipynb  heatmap_nmf.ipynb  heatmap_nmf0610.ipynb  higlass.ipynb  new2__nmf_model_h.npy  nmf.ipynb  nmf_component_color_map.json  nmf_plotting.py  pyproject.toml  requirements.txt
comps/: all_H_component_contributions_k16.csv  mean_component_activity_per_cancer_type_k10.csv  mean_component_activity_per_cancer_type_k11.csv  mean_component_activity_per_cancer_type_k15.csv  mean_component_activity_per_cancer_type_k17.csv  mean_component_activity_per_cancer_type_k21.csv  mean_component_activity_per_cancer_type_k25.csv  mean_component_activity_per_cancer_type_k6.csv  mean_component_activity_per_cancer_type_k7.csv  umap.parquet
conf/: cancer_type_color_map.json  config.json
data/: TCGA_Corces_Metadata.csv  mean_component_activity_per_cancer_type_k12.csv  mean_component_activity_per_cancer_type_k13.csv  mean_component_activity_per_cancer_type_k14.csv  mean_component_activity_per_cancer_type_k16.csv  mean_component_activity_per_cancer_type_k18.csv  mean_component_activity_per_cancer_type_k19.csv  mean_component_activity_per_cancer_type_k2.csv  mean_component_activity_per_cancer_type_k20.csv  mean_component_activity_per_cancer_type_k22.csv  mean_component_activity_per_cancer_type_k23.csv  mean_component_activity_per_cancer_type_k24.csv  mean_component_activity_per_cancer_type_k26.csv  (+5 more)
(+21 files in other folders)
