[project]
name = "nmfvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "jupyter-scatter[all]>=0.22.0",
    "jupyterlab>=4.4.3",
    "numpy<2.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.30.0",
]
