[project]
name = "nmfvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "anywidget>=0.9.18",
    "fsspec>=2025.5.1",
    "higlass-python",
    "ipywidgets>=8.1.7",
    "jupyter-scatter[all]>=0.22.0",
    "jupyterlab>=4.4.3",
    "numpy<2.3",
    "oxbow>=0.4.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "quak>=0.2.2",
    "requests>=2.32.4",
]
